--- a/apache.conf
+++ b/apache.conf
@@ -43,6 +43,7 @@
         php_value upload_max_filesize 10M
 		php_value post_max_size 20M
 		php_value memory_limit 32M
+		php_value max_execution_time 300
 	</Directory>
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
